Added weblogic-cargo profile
git-svn-id: https://svn.java.net/svn/mojarra~svn/branches/2.1.7@14721 761efcf2-d34d-6b61-9145-99dcacc3edf1