@@ -735,6 +735,53 @@
             </properties>
         </profile>
     </profiles>
+        <profile>
+            <id>weblogic-cargo</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.oracle.weblogic</groupId>
+                        <artifactId>wls-maven-plugin</artifactId>
+                        <version>12.1.3.0</version>
+                        <inherited>true</inherited>
+                        <executions>
+                            <execution>
+                                <id>deploy</id>
+                                <phase>pre-integration-test</phase>
+                                <goals>
+                                    <goal>deploy</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>undeploy</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>undeploy</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+            <properties>
+                <weblogic.cargo.home>C:/Wls1213</weblogic.cargo.home>
+                <weblogic.cargo.wlservername>myserver</weblogic.cargo.wlservername>
+                <weblogic.cargo.username>admin</weblogic.cargo.username>
+                <weblogic.cargo.password>adminadmin1</weblogic.cargo.password>
+                <weblogic.cargo.wldomain>${weblogic.cargo.home}/user_projects/domains/mydomain</weblogic.cargo.wldomain>
+                <weblogic.cargo.wlserver>${weblogic.cargo.home}/wlserver</weblogic.cargo.wlserver>
+                <weblogic.cargo.memargs>-Xms512m -Xmx786m -XX:MaxPermSize=786m</weblogic.cargo.memargs>
+                <adminurl>t3://localhost:7001</adminurl>
+                <domainHome>${weblogic.cargo.wldomain}</domainHome>
+                <middlewareHome>${weblogic.cargo.home}</middlewareHome>
+                <weblogicHome>${weblogic.cargo.wlserver}</weblogicHome>
+                <user>${weblogic.cargo.username}</user>
+                <password>${weblogic.cargo.password}</password>
+                <name>${project.build.finalName}</name>
+                <failOnError>false</failOnError>
+                <timeout>60</timeout>
+            </properties>
+        </profile>
     <properties>
         <glassfish.cargoContainerId>glassfish3x</glassfish.cargoContainerId>
         <glassfish.cargoConfigHome>${glassfish.home}/glassfish/domains</glassfish.cargoConfigHome>
